fix for main content spacing in gallery

--- a/src/assets/less/less.less
+++ b/src/assets/less/less.less
@@ -445,8 +445,14 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #gallery-1648 {
-        padding: var(--sectionPadding);
-
+        /* 296px - 364px - top leaving extra space for the navigation */
+        /* 60px - 100px bottom */
+        padding: clamp(18.5rem, 25.95vw, 22.75rem) (16/16rem)
+            clamp(3.75rem, 7.82vw, 6.25rem);
+        position: relative;
+        z-index: 1;
+        /* prevents the topper line from causing an overflow */
+        overflow: hidden;
         .cs-container {
             width: 100%;
             max-width: (1280/16rem);
